# gemini_openai_proxy

./: Dockerfile  README.md  debug_uvicorn.py  env.example  pyproject.toml  request_payloads.txt  requirements.txt  teste.py
TesteChat/: Requisição Básica (Não-Streaming).bru  Requisição com Streaming.bru  Testando a Continuidade da Conversa (Sessão).bru  bruno.json
app/: main.py
app/core/: config.py  logging_config.py
app/models/: openai_schemas.py
app/services/: gemini_service.py
app/utils/: openai_formatter.py
